--- a/build.gradle
+++ b/build.gradle
@@ -36,10 +36,11 @@ dependencies {
 }
 
 tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+        options.encoding = 'UTF-8'
 }
 
 tasks.withType(Test) {
+    systemProperties(System.getProperties())
     useJUnitPlatform()
 
     testLogging {
